<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="0dp">


        <Button
            android:id="@+id/btnInfoApp"
            style="@style/AppTheme.Button"
            android:layout_width="250dp"

            android:layout_height="wrap_content"


            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lang_style"
            android:onClick="onClickOpenActivityInfoForm"
            android:padding="@dimen/my_padding"
            android:text="@string/btn_info"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/btnSettings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnWeb" />

        <Button
            android:id="@+id/btnWeb"
            style="@style/AppTheme.Button"
            android:layout_width="250dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lang_style"

            android:onClick="onClickOpenWeb"
            android:padding="@dimen/my_padding"
            android:text="@string/btn_open_web"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/btnInfoApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

        <Button
            android:id="@+id/btnNew"
            style="@style/AppTheme.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"


            android:layout_marginBottom="10dp"

            android:fontFamily="@font/lang_style"
            android:onClick="onClickOpenInsertFormForResult"
            android:padding="@dimen/my_padding"

            android:text="@string/btn_insert_new_driver_main"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/btnNewQr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnNewQr"
            style="@style/AppTheme.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            android:fontFamily="@font/lang_style"

            android:onClick="onClickOpenInsertFormForResultQr"
            android:padding="@dimen/my_padding"

            android:text="@string/btn_insert_new_driver_qr"

            android:textColor="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/btnUpdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNew" />


        <Button
            android:id="@+id/btnUpdate"
            style="@style/AppTheme.Button"
            android:layout_width="250dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lang_style"
            android:onClick="onClickOpenUpdateForm"
            android:padding="@dimen/my_padding"

            android:text="@string/btn_update_old_driver"
            android:textColor="@color/grey"


            app:layout_constraintBottom_toTopOf="@+id/btnWeb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNewQr" />


        <Button
            android:id="@+id/btnExitMain"
            style="@style/AppTheme.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="150dp"
            android:fontFamily="@font/lang_style"
            android:onClick="ExitMainActivity"
            android:padding="@dimen/my_padding"
            android:text="@string/btn_exit_main"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSettings" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="78dp"
            android:layout_height="65dp"
            android:layout_marginStart="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnExitMain"
            app:layout_constraintVertical_bias="0.707"
            app:srcCompat="@drawable/ic_man"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="72dp"
            android:layout_height="62dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.767"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/btnSettings"
            app:layout_constraintVertical_bias="0.798"
            app:srcCompat="@drawable/ic_fingerup"
            tools:ignore="VectorDrawableCompat" />

        <Button
            android:id="@+id/btnSettings"
            style="@style/AppTheme.Button"
            android:layout_width="246dp"
            android:layout_height="43dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lang_style"
            android:onClick="onClickOpenSettingsForm"
            android:text="Settings"


            android:textColor="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/btnExitMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnInfoApp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>